--- a/src/scripts/views/position.html
+++ b/src/scripts/views/position.html
@@ -50,17 +50,7 @@
     </div>
   </div>
 
-  <!-- 限时抢购 -->
-  <div class="positon_flashTime">
-    <div class="title">
-      <p>限时抢购</p>
-      <i class="yo-ico">&#xe65f;</i>
-    </div>
-    <div class="positon_flashTime_con1">
-      <div class="positon_flashTime_con">
-      </div>
-    </div>
-  </div>
+  
   <!-- 新品发布 -->
   <div class="position_newProduct">
     <div class="title">
@@ -694,7 +684,59 @@
       </div>
     </div>
   </div>
-
+<!-- 限时抢购 -->
+<div class="positon_flashTime">
+    <div class="title">
+      <p>限时抢购</p>
+      <i class="yo-ico">&#xe65f;</i>
+    </div>
+    <div class="positon_flashTime_con1">
+      <div class="positon_flashTime_con">
+          <div class="positon_flashTime_content" >
+              <div>
+                <span ></span>
+                <img src="../../images/time.jpg">
+              </div>
+              <div>
+                <div class="yo-ico">已结束</div>
+                <p>1.8米进口杨木床</p>
+                <span>
+                  ¥<i>1899</i>
+                  <del>2899</del>
+                </span>
+              </div>
+            </div>
+            <div class="positon_flashTime_content" >
+                <div>
+                  <span ></span>
+                  <img src="../../images/time2.jpg">
+                </div>
+                <div>
+                  <div class="yo-ico">已结束</div>
+                  <p>1.5米高箱床</p>
+                  <span>
+                    ¥<i>1499</i>
+                    <del>2499</del>
+                  </span>
+                </div>
+              </div>
+              <div class="positon_flashTime_content" >
+                  <div>
+                    <span ></span>
+                    <img src="../../images/time3.jpg">
+                  </div>
+                  <div>
+                    <div class="yo-ico">已结束</div>
+                    <p>1.2米三层儿童床</p>
+                    <span>
+                      ¥<i>1999</i>
+                      <del>2580</del>
+                    </span>
+                  </div>
+                </div>
+      </div>
+    </div>
+  </div>
   <!-- 精选风格 -->
   <div class="position_profectStyle">
     <div class="title">
