--- a/src/scripts/views/position_list.html
+++ b/src/scripts/views/position_list.html
@@ -1,8 +1,5 @@
-
-
   {{#each list1}}
-  
-    <div class="position_guess_div_con">
+    <div class="position_guess_div_con" id="{{id}}">
       <div><img src="//image.meilele.com/{{goods_thumb_1}}"></div>
       <div>
         <p>￥{{shop_price}}</p>
