--- a/src/scripts/views/position_time.html
+++ b/src/scripts/views/position_time.html
@@ -1,12 +1,12 @@
 {{#each list}}
   
-  <div class="positon_flashTime_content">
+  <div class="positon_flashTime_content" id="{{id}}">
     <div>
-      <span data-end="{{end_time}}" data-start="{{start_time}}">即将开始</span>
+      <span data-end="{{end_time}}" data-start="{{start_time}}"></span>
       <img src="//image.meilele.com/{{img_url}}">
     </div>
     <div>
-      <div class="yo-ico">&#xe64d;0天20:36:26后开始</div>
+      <div class="yo-ico"></div>
       <p>{{title}}</p>
       <span>
         ¥<i>{{good_price}}</i>
