--- a/src/scripts/views/details.html
+++ b/src/scripts/views/details.html
@@ -1,6 +1,6 @@
 <div>
     <header class="detHead">
-        <span class="yo-ico">&#xe660;</span>
+        <span class="yo-ico goback1">&#xe660;</span>
         <span>商品详情</span>
         <span class="yo-ico">&#xe63f;</span>
         <span class="yo-ico">&#xeeea;</span>
@@ -66,11 +66,11 @@
 <nav class="bottom">
     <ul>
         <li>
-            <i class="iconfont">&#xe643;</i>
+            <i class="yo-ico">&#xe644;</i>
             <span>收藏</span>
         </li>
         <li>
-            <i class="iconfont">&#xe665;</i>
+            <i class="yo-ico">&#xe665;</i>
             <span>客服</span>
         </li>
         <li>加入购物车</li>
