--- a/src/scripts/views/new-goods.html
+++ b/src/scripts/views/new-goods.html
@@ -12,11 +12,12 @@
             <li>
                 <span>价格</span>
                 <span>
-                    <i class="yo-ico">&#xe618;</i><i class="yo-ico">&#xe65c;</i>
+                    <i class="yo-ico priceUp">&#xe618;</i>
+                    <i class="yo-ico priceDown">&#xe65c;</i>
                 </span>
             </li>
             <li>筛选<i class="yo-ico">&#xe608;</i></li>
-            <li class="yo-ico">&#xe62e;</li>
+            <li class="yo-ico cutStyle">&#xe62e;</li>
         </ul>
     </nav>
     <nav class="ceiling">
