--- a/src/styles/modules/newGoods.scss
+++ b/src/styles/modules/newGoods.scss
@@ -121,6 +121,8 @@
                 height: 100%;
                 line-height: .4rem;
                 text-align: center;
+                font-size: .18rem;
+                color:#333;
             }
         }
     }
