--- a/src/scripts/views/search.html
+++ b/src/scripts/views/search.html
@@ -1,6 +1,6 @@
 <div class="root-class">
   <div class="search-top">
-    <div class="search"></div>
+    <div class="search"><i class="yo-ico">&#xe651;</i><i>搜索商品</i></div>
   </div>
   <div class="class-mid">
     <div class="class-mid-left">
@@ -51,6 +51,12 @@
       <div class="content">
         <div>
           <a href="##"><img src="../../images/laozhu-fenlei-1.jpg" alt=""></a>
+          <h3>热卖专场<span>更多<i class="yo-ico">&#xe65f;</i></span></h3>
+          <div class="img1">
+            <img src="../../images/laozhu-fenlei-2.jpg" alt="">
+            <img src="../../images/laozhu-fenlei-3.jpg" alt="">
+            <img src="../../images/laozhu-fenlei-4.jpg" alt="">
+          </div>
         </div>
         <div style="display: none;"></div>
       </div>
