--- a/src/styles/modules/search-class.scss
+++ b/src/styles/modules/search-class.scss
@@ -16,9 +16,12 @@
         .search {
             width: 3.44rem;
             height: 0.3rem;
+            line-height: 0.3rem;
             background: #eee;
+            color: #aaaaaa;
             @include flexbox();
             @include border-radius(0.05rem);
+            @include justify-content(center);
         }
     }
     .class-mid {
@@ -64,6 +67,29 @@
                 div:first-child {
                     a img {
                         width: 100%;
+                    }
+                    h3 {
+                        height: 0.5rem;
+                        line-height: 0.5rem;
+                        font-size: 0.15rem;
+                        color: #333333;
+                        font-weight: normal;
+                        span {
+                            float: right;
+                            font-size: 0.1rem;
+                            color: #666666;
+                        }
+                    }
+                    .img1 {
+                        width: 100%;
+                        height: 1rem;
+                        @include flexbox();
+                        @include justify-content(space-between);
+                        @include flex-wrap(wrap);
+                        img {
+                            width: 32%;
+                            height: auto;
+                        }
                     }
                 }
             }
