--- a/src/styles/modules/newGoods.scss
+++ b/src/styles/modules/newGoods.scss
@@ -6,6 +6,55 @@
   url('/iconfonts/iconfont.ttf') format('truetype'),
   url('/iconfonts/.svg#iconfont') format('svg');
 }
+
+#fixed-top{
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 1002;
+}
+
+.ceiling1{
+    width:100%;
+    height: .44rem;
+    background:#fff;
+    @include flexbox();
+    @include border(1px, #d8d8d8,solid,null);
+    border-left:none;
+    border-right:none;
+
+    &>ul{
+        width:100%;
+        height: 100%;
+        padding-top:.08rem;
+        @include flexbox();
+        @include justify-content(space-around);
+        &>li{
+           width:21%;
+           height: .28rem;
+           line-height: .28rem;
+           color:#666;
+           background:#f0f0f0;
+           text-align: center;
+           @include border(1px, #f0f0f0,solid,3px);
+        }
+        &>li:nth-child(3),li:nth-child(4){
+            @include flexbox();
+           
+            &>span{
+                width:85%;
+                height: 100%;
+            }
+            &>i{
+                 width:20%;
+                 height: 100%;
+                 font-size: .12rem;
+                 text-align: center;
+            }
+        }
+    }
+}
+
 .newgoods{
     width:100%;
     .listHead{
@@ -121,6 +170,9 @@
                     }
                 }
             }
+            &>li:nth-child(3){
+                color:#da0000;
+            }
             &>li:nth-child(4){
                 width: 13%;
                 height: 100%;
@@ -130,13 +182,6 @@
                 color:#333;
             }
         }
-    }
-    
-    #fixed-top{
-        position: fixed;
-        top:0;
-        left:0;
-        z-index: 999;
     }
     
     .ceiling{
@@ -339,6 +384,124 @@
             color:#aaa;
             font-size:.12rem;
             padding-bottom: .04rem;
+        }
+    }
+}
+
+.mask{
+    width:100%;
+    height: 100%;
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 1111;
+    @include flexbox();
+    @include justify-content();
+    display: none;
+
+    .dispaly{
+        width:15%;
+        background:#000;
+        opacity: .7;
+        @include flexbox();
+        @include flex-direction(column);
+        @include justify-content(center);
+        text-align: center;
+        &>span{
+            width:100%;
+            height: .4rem;
+            font-size: .16rem;
+            color:#aaa;
+            line-height: 100%;
+        }
+        &>span:nth-child(1){
+            width:50%;
+            margin-left:25%;
+        }
+    }
+    .filter{
+        width:85%;
+        background: #fff;
+        position: relative;
+
+        &>.filter_price{
+            width:100%;
+            height: 1.4rem;
+            margin-top:.4rem;
+            padding:.06rem .1rem;
+            @include border(1px 0 1px 0,#aaa,solid);
+
+            &>div:nth-child(1){
+                width:100%;
+                height: .3rem;
+                line-height: .3rem;
+                font-size:.14rem;
+                color:#666;
+                @include flexbox();
+                @include justify-content(space-between);
+            }
+            &>div:nth-child(2){
+                width:100%;
+                height: .4rem;
+                color:#666;
+                line-height: .4rem;
+                font-size:.14rem;
+                @include flexbox();
+                @include justify-content(flex-start);
+
+                &>span{
+                    width:.8rem;
+                    height: .26rem;
+                    background: #f5f5f5;
+                    text-align: center;
+                    line-height: .26rem;
+                    margin-right: .1rem;
+                }
+                &>span:nth-child(2){
+                    width:.2rem;
+                    background: #fff;
+                }
+            }
+            &>div:nth-child(3){
+                width:100%;
+                height: .4rem;
+                color:#666;
+                line-height: .4rem;
+                font-size:.14rem;
+                @include flexbox();
+                @include justify-content(space-around);
+
+                &>span{
+                    width:.8rem;
+                    height: .26rem;
+                    background: #f5f5f5;
+                    text-align: center;
+                    line-height: .26rem;
+                    margin-right: .1rem;
+                    @include border(1px,#f5f5f5,solid);
+                }
+            }
+        }
+        &>.mack-btn{
+            width:100%;
+            height: .44rem;
+            @include flexbox();
+            @include justify-content();
+            @include border(1px 0 0 0,#aaa,solid);
+            position: absolute;
+            bottom: 0;
+            left:0;
+            &>span{
+                width:100%;
+                height: 100%;
+                color:#333;
+                text-align: center;
+                line-height: .44rem;
+            }
+            &>span:nth-child(2){
+                background: #da0000;
+                color:#fff;
+            }
         }
     }
 }
