--- a/src/scripts/views/search-sousuo.html
+++ b/src/scripts/views/search-sousuo.html
@@ -1,1 +1,11 @@
-<div class="root"></div>
+<div class="root">
+    <div class="head">
+        <div class="search-wrap">
+            <div class="search-ipt"><input type="text" value="搜索商品"></div>
+            <div class="search-icon"><i class="yo-ico">&#xe651;</i></div>
+        </div>
+        <div class="btn">取消</div>
+    </div>
+    <div class="info">正在热搜中</div>
+    <div class="list"></div>
+</div>
