--- a/src/scripts/views/details.html
+++ b/src/scripts/views/details.html
@@ -1,6 +1,6 @@
 <div>
     <header class="detHead">
-        <span class="yo-ico">&#xe660;</span>
+        <span class="yo-ico" id="gopre">&#xe660;</span>
         <span>商品详情</span>
         <span class="yo-ico">&#xe63f;</span>
         <span class="yo-ico">&#xeeea;</span>
