--- a/src/scripts/views/home.html
+++ b/src/scripts/views/home.html
@@ -60,5 +60,9 @@
                 <b>我的</b>
             </li>
         </ul>
+        <div class="top" >
+                <i class="yo-ico"> &#xe65d;</i>
+            </div>
     </nav>
+    
 </div>
