--- a/src/scripts/views/ContentTel.html
+++ b/src/scripts/views/ContentTel.html
@@ -14,14 +14,24 @@
     </header>
     <main class="mll-main">
     </main>
-    <footer class="mll-footer">
-      <div class="btns">
-        <div class="btns-app">下载APP</div>
-        <div class="btns-pc">电脑版</div>
-      </div>
-      <div class="icp">
-        <p>天津美维信息技术有限公司</p>
-        <p>ICP备案证书号：粤ICP备08008334号</p>
-      </div>
-    </footer>
+    <nav class="navfooter">
+      <ul>
+          <li class="active">
+              <i class="yo-ico">&#xe64f;</i>
+              <b>首页</b>
+          </li>
+          <li>
+              <i class="yo-ico">&#xe685;</i>
+              <b>分类</b>
+          </li>
+          <li>
+              <i class="yo-ico">&#xe63f;</i>
+              <b>购物车</b>
+          </li>
+          <li>
+              <i class="yo-ico">&#xe659;</i>
+              <b>我的</b>
+          </li>
+      </ul>
+  </nav>
   </div>
