--- a/src/scripts/views/details.html
+++ b/src/scripts/views/details.html
@@ -2,7 +2,7 @@
     <header class="detHead">
         <span class="yo-ico goback1">&#xe660;</span>
         <span>商品详情</span>
-        <span class="yo-ico">&#xe63f;</span>
+        <span class="yo-ico" id="letgo">&#xe63f;</span>
         <span class="yo-ico">&#xeeea;</span>
     </header>
     <div class="goodDetail">
